--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "BROWSER=none react-scripts start",
-    "build": "mv _vercel.json vercel.json && react-scripts build",
+    "build": "mv _vercel.json vercel.json && cat vercel.json && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
